--- a/Final-notebooks/Example3-NCF/ncf-explicit-feedback.ipynb
+++ b/Final-notebooks/Example3-NCF/ncf-explicit-feedback.ipynb
@@ -45,48 +45,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib64/python2.7/site-packages/scipy/sparse/lil.py:16: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from . import _csparsetools\n",
-      "/usr/lib64/python2.7/site-packages/sklearn/utils/__init__.py:9: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from .murmurhash import murmurhash3_32\n",
-      "/usr/lib64/python2.7/site-packages/scipy/linalg/basic.py:17: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._solve_toeplitz import levinson\n",
-      "/usr/lib64/python2.7/site-packages/scipy/linalg/__init__.py:202: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._decomp_update import *\n",
-      "/usr/lib64/python2.7/site-packages/scipy/special/__init__.py:640: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._ufuncs import *\n",
-      "/usr/lib64/python2.7/site-packages/scipy/special/_ellip_harm.py:7: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._ellip_harm_2 import _ellipsoid, _ellipsoid_norm\n",
-      "/usr/lib64/python2.7/site-packages/scipy/optimize/_trlib/__init__.py:1: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._trlib import TRLIBQuadraticSubproblem\n",
-      "/usr/lib64/python2.7/site-packages/scipy/optimize/_numdiff.py:8: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._group_columns import group_dense, group_sparse\n",
-      "/usr/lib64/python2.7/site-packages/scipy/interpolate/_bsplines.py:9: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from . import _bspl\n",
-      "/usr/lib64/python2.7/site-packages/scipy/spatial/__init__.py:94: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from .ckdtree import *\n",
-      "/usr/lib64/python2.7/site-packages/scipy/spatial/__init__.py:95: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from .qhull import *\n",
-      "/usr/lib64/python2.7/site-packages/scipy/spatial/_spherical_voronoi.py:18: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from . import _voronoi\n",
-      "/usr/lib64/python2.7/site-packages/scipy/spatial/distance.py:121: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from . import _hausdorff\n",
-      "/usr/lib64/python2.7/site-packages/scipy/stats/_continuous_distns.py:17: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from . import _stats\n",
-      "/usr/lib64/python2.7/site-packages/sklearn/utils/extmath.py:24: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._logistic_sigmoid import _log_logistic_sigmoid\n",
-      "/usr/lib64/python2.7/site-packages/sklearn/utils/extmath.py:26: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from .sparsefuncs_fast import csr_row_norms\n",
-      "/usr/lib64/python2.7/site-packages/sklearn/metrics/cluster/supervised.py:23: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from .expected_mutual_info_fast import expected_mutual_information\n",
-      "/usr/lib64/python2.7/site-packages/sklearn/metrics/pairwise.py:30: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from .pairwise_fast import _chi2_kernel_fast, _sparse_manhattan\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -95,6 +53,10 @@
     }
    ],
    "source": [
+    "import warnings\n",
+    "# Ignoring the warnings to improve readability of the notebook\n",
+    "warnings.filterwarnings(\"ignore\", message=\"numpy.dtype size changed\")\n",
+    "\n",
     "from zoo.models.recommendation import UserItemFeature\n",
     "from zoo.models.recommendation import NeuralCF\n",
     "from zoo.common.nncontext import init_nncontext\n",
@@ -149,20 +111,6 @@
    "source": [
     "rating_list = [i.strip().split(\"::\") for i in open(\"/opt/work/ODSC-east-2019/datasets/NCF/ml-1m/ratings.dat\",\"r\").readlines()]    \n",
     "movielens_data = np.array(rating_list).astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-08-03T08:13:08.071512Z",
-     "start_time": "2017-08-03T08:13:04.077308Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "movielens_data = movielens.get_id_ratings(\"/tmp/movielens/\")\t"
    ]
   },
   {
